@@ -1,3 +1,12 @@
+2013-08-08  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module_logevent.h: Updated the EventID mask. The
+	  Windows Event Log Viewer seems to ignore the most significant 16
+	  bits of the event id.
+
+	* modules/pandora_module_logevent.cc: Do not discard existing
+	  events when running in debug mode.
+
 2013-06-26 Miguel de Dios <miguel.dedios@artica.es>
 
 	* bin/pandora_agent.conf: restored the remote_config as disabled
